# anatomia

./: .env.production.example  .gitignore  DEPLOYMENT.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  render.yaml
.github/workflows/: ci.yml  deploy.yml
backend/: .dockerignore  .env.example  Dockerfile  anatomia.db  docker-entrypoint.sh  fly.toml  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  db.py  main.py
backend/app/api/: admin.py  countries.py  diseases.py  glossary.py  organs.py  quiz.py  search.py  stats.py  world.py
backend/app/data/: countries.py  diseases.py  glossary.py  organs.py
backend/app/models/: __init__.py  country.py  disease.py  glossary.py  ingestion.py  organ.py  source.py
backend/app/schemas/: __init__.py  country.py  disease.py  glossary.py  organ.py  search.py  source.py
backend/app/scripts/: seed.py
backend/app/scripts/ingest/: base.py  runner.py  who_gho.py  wikipedia.py
backend/app/services/: mappers.py
backend/tests/: test_api_smoke.py
deploy/nginx/: anatomia.conf
deploy/scripts/: backup-db.sh  bootstrap-vps.sh  restore-db.sh  update.sh
deploy/systemd/: anatomia.service
docs/: adr-001-data-architecture.md  architecture.md  use-cases.md
frontend/: .dockerignore  .eslintrc.cjs  Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml  tailwind.config.js  vercel.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/data/: anatomy-models.json  (+1 more)
scripts/: convert_bp3d_to_glb.py  inventory_bp3d.py  rewrite_history.py
(+96 files in other folders)
